Fix project-cards wrapping
Fix project-cards wrapping while img src was loading

--- a/src/pages/projects.scss
+++ b/src/pages/projects.scss
@@ -3,4 +3,5 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	gap: 30px;
+	width: 100%;
 }
